# agentize

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml
.github/: auto-reviewer-assign.yml
.github/workflows/: auto-review-assign.yml  bump-version.yml
examples/: chatbot_agent.py  demo.py  financial_research_agents.py  hwchiu_agent.py  improve_prompt.py  mcp_chatbot.py  prompt_generation.py  research_agents.py  summarize.py  summary_chatbot.py
src/agentize/: context.py  lazy.py  model.py  utils.py
src/agentize/agents/: __init__.py  planner_agent.py  writer_agent.py
src/agentize/chains/: summary.py
src/agentize/crawler/: __init__.py  firecrawl.py
src/agentize/prompts/: __init__.py  meta_v2.py  research.py  summary.py
src/agentize/tools/: __init__.py  boto3.py  duckduckgo.py  firecrawl.py  flights.py  markitdown.py  summary.py  telegragh.py  wise.py
tests/prompts/: test_summary.py
