[project]
name = "agentize"
version = "0.0.11"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=2.5.3",
    "loguru>=0.7.3",
    "openai-agents>=0.0.13",
    "wisest>=0.14.1",
    "your-telegraph>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "chainlit>=2.5.5",
    "logfire>=3.14.1",
    "mypy>=1.15.0",
    "nest-asyncio>=1.6.0",
    "pip>=25.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.3",
    "types-aiofiles>=24.1.0.20250326",
    "types-deprecated>=1.2.15.20250304",
    "types-pyyaml>=6.0.12.20250402",
    "types-ujson>=5.10.0.20250326",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.0.11"
tag = true
commit = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]
